@@ -9,7 +9,7 @@
    datafile_tot = "./SCRATCH/H2graph_WanT.ham"
    datafile_emb = "./SCRATCH/gau_H2embed_WanT.ham"
    datafile_sgm_emb = "./SCRATCH/gau_H2embed_WanT.sgm"
-   delta = 0.050
+   delta = 0.150
    transport_dir = 3
    smearing_type = "gaussian"
    use_symm = .TRUE.
