@@ -4,6 +4,9 @@
 =======================================================
 
 
+Oct 31 2010      Bug fixed in embed. Trace of the gamma function (coupling matrix)
+                 printed out in the dos file. Test14 updated. (AF)
+
 Oct 30 2010      Bug fixed in embed when using smearing different from lorentzian.
                  Test14 updated with an example of gaussian smearing. (AF)
 
